<!--  
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
	

	
	<FrameLayout
        android:id="@+id/left_drawer"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
	
</android.support.v4.widget.DrawerLayout>
-->


<android.support.v4.widget.SlidingPaneLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    
    <fragment
        android:name="de.luhmer.owncloudnewsreader.NewsReaderListFragment"
        android:id="@+id/left_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />
    
    
    <fragment
        android:name="de.luhmer.owncloudnewsreader.NewsReaderDetailFragment"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
		
</android.support.v4.widget.SlidingPaneLayout>